test/error/error.input37.zc
Expected:, on line 3
